# YSUNetLogin

./: .gitignore  .gitmodules  CAPTCHA_IMPROVEMENTS.md  LICENSE  PUBLISH_CHECKLIST.md  README.md  README_GUI.md  RELEASE_NOTES.md  ascii_art_test.py  build_exe.py  diagnose_device.py  example.py  find_methods.py  gui_launcher.py  main.py  publish_to_github.bat  pyproject.toml  requirements.txt  ruijie_ysu.ipynb  test.py  test_captcha_display.py
src/ysu_net_login/: __init__.py  config.py  gui.py  ruijie_cli.py  ruijie_client.py  test_write.txt  wifi_manager.py  ysu_login.py
