[project]
name = "ysu-net-login"
version = "2.0.0"
description = "燕山大学锐捷V2网络认证命令行工具"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SkyRain", email = "admin@misakacloud.net"},
]
dependencies = [
    "requests>=2.25.0",
    "pycryptodome>=3.15.0",
    "beautifulsoup4>=4.9.0",
    "urllib3>=1.26.0",
    "Pillow>=8.0.0",
    "customtkinter>=5.2.0",
]

[project.scripts]
ysunetlogin = "ysu_net_login.ruijie_cli:main"
ysunetlogin-gui = "ysu_net_login.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/ysu_net_login"]
